--- a/src/components/MDXProvider/components/AlignCenter/style.css
+++ b/src/components/MDXProvider/components/AlignCenter/style.css
@@ -1,5 +1,6 @@
 .align_center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
