--- a/src/components/MDXProvider/components/ImageAd/style.css
+++ b/src/components/MDXProvider/components/ImageAd/style.css
@@ -2,8 +2,3 @@
   margin: 0 auto;
   display: block;
 }
-
-.image_ad img {
-  width: 100%;
-  cursor: pointer;
-}
